--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import "./layout.css";
+@import "./utilities.css";
 
 #root {
   margin: 0;
@@ -6,33 +8,35 @@
 }
 
 @theme {
-  --shadow-custom-1: "rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px";
+  --shadow-custom-1: "rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px   inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px";
 }
 
-:root {
+.app-btn {
+  @apply flex items-center gap-2 text-blue-400 cursor-pointer hover:text-blue-800 font-medium transition-all duration-200;
 }
 
-#page {
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
-  margin: auto;
+@layer utilities {
+  ol,
+  ul,
+  menu {
+    list-style: initial !important;
+    margin: 0 20px !important;
+  }
+
+  ol li {
+    list-style-type: circle;
+  }
 }
 
+/* min-h-[297mm] */
 .resume-container {
-  width: 210mm; /* A4 width - full size */
-  max-width: 210mm; /* A4 width - full size */
-  min-width: 210mm; /* A4 width - full size */
-  min-height: 297mm; /* A4 height - full size */
-  max-height: 357mm; /* A4 height - full size */
-  background: white;
-  overflow: hidden;
+  @apply w-[210mm] min-w-[210mm] bg-white h-fit min-h-[297mm];
 }
 
 @media screen {
   .resume-container {
-    transform: scale(0.7); /* Scales down to 70% for screen viewing */
-    transform-origin: top center; /* Ensures scaling happens from the top center */
+    transform: scale(0.65);
+    transform-origin: top;
   }
 }
 @media screen and (max-width: 1100px) {
@@ -48,7 +52,7 @@
 
 @media screen and (max-width: 768px) {
   .resume-container {
-    transform: scale(0.7); /* Scales down to 70% for screen viewing */
+    transform: scale(0.4); /* Scales down to 70% for screen viewing */
   }
 }
 @media screen and (max-width: 576px) {
@@ -57,32 +61,5 @@
   }
   .preview-wrapper {
     max-height: 600px;
-  }
-}
-
-circle {
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background: white;
-  border: var(--color-blue-500) 1px solid;
-}
-
-.app-btn {
-  @apply flex items-center gap-2 text-blue-400 cursor-pointer hover:text-blue-800 font-medium transition-all duration-200;
-}
-
-.fade-in {
-  animation: fadeIn 500ms ease-in;
-}
-
-@keyframes fadeIn {
-  from {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: none;
-    opacity: 1;
   }
 }
